# stable-channels

./: .dockerignore  .env.example  .gitignore  COPYING  Cargo.toml  Dockerfile  README.md  SECURITY.md  SETUP.md  config.toml  default_config.toml  demo-script.md  deploy_lsp.sh  env.example  explore-lsp-restart-issue.txt  lnd.py  logs.txt  make_mac_app.sh  nostrpost.py  peerstables.py  requirements.txt  stability_logic.md  stablechannels.py  stablereceiver.conf  test_stablechannels.py
.githooks/: install.sh  pre-commit
.github/workflows/: android-build.yml  ci.yml  linux-build.yml  mac-build.yml  main_v24.02.yml  swift-format.yml  umbrel-images.yml  windows-build.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
data/node1/: bdk_wallet_qslzjyqd3y6r03s4.sqlite  keys_seed  ldk_node_data.sqlite
data/node2/: bdk_wallet_f6j9ej4scwhyy89g.sqlite  keys_seed  ldk_node_data.sqlite
data/node3/: bdk_wallet_u5vntg66dqfjka2z.sqlite  keys_seed  ldk_node_data.sqlite
e2e/: .gitignore  Makefile  README.md  config.yaml  run.sh
e2e/flows/: 01_onboard_lightning.yaml  02_btc_to_usd.yaml  03_usd_stability.yaml  04_lightning_receive.yaml  05_onchain_receive.yaml  06_lightning_send.yaml  07_onchain_send.yaml  08_usd_to_btc.yaml  09_close_channel.yaml  10_backup_keys.yaml  11_import_keys.yaml  12_offboard_onchain.yaml
e2e/flows/helpers/: assert_settlement.js  assert_usd_balance_dropped.js  create_address.js  create_invoice.js  mine_blocks.js  pay_invoice.js  remember_usd_balance.js  send_onchain.js  set_price.js  set_price_and_mark.js
e2e/harness/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  push-test-config-ios.sh  push-test-config.sh
e2e/harness/configs/: ldk-server.toml  sc-lsp.toml
e2e/harness/docker/: Dockerfile.ldk-server  Dockerfile.lsp-gui  Dockerfile.sc-lsp  ldk-server-guard.sh  lsp-gui-nginx.conf
e2e/harness/src/: main.rs
e2e/scripts/: backend.sh  common.sh  prepare-android.sh  prepare-ios.sh  run-flows.sh  run-mac-demo.sh  run-mac-flows.sh  run-mac-smoke.sh  run-mac-ui.sh
ios/: .swiftformat
ios/StableChannels/: Package.resolved  Package.swift  README.md  project.yml
ios/StableChannels/NotificationService/: Info.plist  NotificationService.entitlements  NotificationService.swift  PaymentDirection.swift
ios/StableChannels/NotificationService/Services/: Constants.swift  IncomingPaymentHandler.swift  LSPToUserHandler.swift  Logger.swift  NodeStarter.swift  NotificationContentMutator.swift  SQLitePaymentDatabase.swift  StableControlParser.swift  UserToLSPHandler.swift
ios/StableChannels/StableChannels/: AppState.swift  ContentView.swift  Info.plist  Localizable.xcstrings  PrivacyInfo.xcprivacy  StableChannels.entitlements  StableChannelsApp.swift  greenlight.grpc.swift
ios/StableChannels/StableChannels.xcodeproj/: project.pbxproj
ios/StableChannels/StableChannels/App/: AppState.swift  BackgroundTaskManager.swift  ContentView.swift  MainTabView.swift  PaymentDetailCoordinator.swift  StableChannelsApp.swift
ios/StableChannels/StableChannels/Components/: QRCodeExtractor.swift  ShareSheetPresenter.swift
ios/StableChannels/StableChannels/Domain/: BackupModels.swift  (+2 more)
ios/StableChannels/StableChannelsTests/: CloseTxidResolverTests.swift  DatabaseServiceTests.swift  FeeRateServiceTests.swift  MempoolWebSocketServiceTests.swift  OnchainTxidResolverTests.swift  PendingPushPaymentTests.swift  ResilientEsploraClientTests.swift  StabilityServiceTests.swift  StaggeredTaskLauncherTests.swift
legacy/: demo-script.md  requirements.txt
legacy/src/: audit.rs  server.rs  user.rs
nostr/: event.py
nostr/client/: client.py
python-cln-plugin/: requirements.txt  stablechannelFINAL.py  stablechannels.py  stableprovider.conf  stablereceiver.config
python-server/: app.py
server/: README.md
server/lsp-server-gui/: Cargo.toml  index.html
server/lsp-server-gui/src/: app.rs  config.rs  main.rs  state.rs  task.rs
server/lsp-server-gui/src/ui/: audit_log.rs  balances.rs  channel_history.rs  channels.rs  connection.rs  forwarded_payments.rs  layout.rs  ldk_log.rs  lightning.rs  log_view.rs  logs.rs  mod.rs  network_graph.rs  node_info.rs  onchain.rs  payments.rs  peers.rs  settings.rs  stable_channels.rs  tools.rs  widgets.rs
server/sc-protos/: Cargo.toml
server/sc-protos/src/: lib.rs  stable.rs
server/sc-rest-client/: Cargo.toml
server/sc-rest-client/src/: client.rs  error.rs  lib.rs
server/stable-channels-lsp/: Cargo.toml  example-config.toml
server/stable-channels-lsp/src/: auth.rs  backfill.rs  channel_close.rs  config.rs  event_loop.rs  main.rs  messages.rs  observability.rs  price_task.rs  stability_tick.rs  stable_manager.rs  state.rs  tls.rs
server/stable-channels-lsp/src/handlers/: audit_log.rs  channel_exists.rs  channels.rs  graph.rs  ldk_log.rs  lightning.rs  mod.rs  onchain.rs  payments.rs  peers.rs  price.rs  proxy.rs  register_push.rs  stable_channels.rs  tools.rs
server/stable-channels-lsp/src/push/: apns.rs  fcm.rs  mod.rs  tokens.rs
src/: audit.rs  config.rs  constants.rs  db.rs  desktop_config.rs  exchange.rs  gui.rs  historical_prices.rs  ldk_node_adapter.rs  ldk_wrapper.rs  lib.rs  lightning.rs  lsp.rs  main.rs  price_feeds.rs  server.rs  stable.rs  state.rs  types.rs  user.rs
src/user/: mac_e2e.rs
tests/: regtest.rs
tests/common/: mod.rs
umbrel/: README.md
umbrel/docker/: 40-publish-api-key.sh  Dockerfile.ldk-server  Dockerfile.lsp-gui  Dockerfile.sc-lsp  ldk-server-guard.sh  lsp-gui-nginx.conf.template
umbrel/stable-channels-lsp/: docker-compose.yml  umbrel-app.yml
umbrel/stable-channels-lsp/hooks/: pre-start
umbrel/test/: docker-compose.sim.yml  run-sim.sh
umbrel/test/store-server/: git-smart-http.py  make-store.sh  umbrel-app-store.yml.tmp
website/: index.html
website/js/: contact-form.js  custom.js
website/webtest/: index.html  script.js  style.css
(+176 files in other folders)
