[package]
name = "stable-channels"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = []
lsp = []
exchange = []

[alias]
user = "run --quiet"
lsp = "run --quiet"
exchange = "run --quiet"

[dependencies]
chrono = "0.4"
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node.git", rev = "1525255222cd7a48de3a9301a3053e8a4e3d1a86" }
lightning = { version = "0.0.125", features = ["std"] }
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"
lazy_static = "1.4"
dirs = "5.0"

# GUI dependencies
eframe = { version = "0.30.0" }
egui = { version = "0.30.0", default-features = false, features = ["color-hex"] }
egui_extras = { version = "0.30.0", features = ["default"] }
qrcode = { version = "0.14" }
image = { version = "0.24" }

[package.metadata.bundle]
name = "Stable Channels"
identifier = "com.stablechannels"
icon = ["icons/icon.icns"]
version = "0.1.0"
resources = ["assets", "resources"]
copyright = "Copyright (c) 2025 Your Name"
category = "Finance"
short_description = "Bitcoin stable channels app"
long_description = "A Bitcoin wallet with stable channels that maintains value in USD."