[package]
name = "stable-channels"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = []
lsp = []
exchange = []

[dependencies]
chrono = "0.4"
ldk-node = { git = "https://github.com/lightningdevkit/ldk-node.git", rev = "1525255222cd7a48de3a9301a3053e8a4e3d1a86" }
lightning = { version = "0.0.125", features = ["std"] }
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"
lazy_static = "1.4"
dirs = "5.0"

# GUI dependencies
eframe = { version = "0.30.0" }
egui = { version = "0.30.0", default-features = false, features = ["color-hex"] }
egui_extras = { version = "0.30.0", features = ["default"] }
qrcode = { version = "0.14" }
image = { version = "0.24" }

# backend HTTP API stack 
anyhow = "1.0"
axum  = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"

# lsp ops dashboard stack
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"

[package.metadata.bundle]
name = "Stable Channels"
identifier = "com.stablechannels"
icon = ["icons/icon.icns"]
version = "0.1.0"
resources = ["assets", "resources"]
copyright = "Copyright (c) 2025 Your Name"
category = "Finance"
short_description = "Bitcoin stable channels app"
long_description = "A Bitcoin wallet with stable channels that maintains value in USD."

[[bin]]
name = "lsp_backend"
path = "src/bin/lsp_backend.rs"

[[bin]]
name = "lsp_dashboard"
path = "src/bin/lsp_dashboard.rs"

[patch.crates-io]
openssl-sys = { version = "0.9.109", features = ["vendored"] }