[package]
name = "stable-channels"
version = "0.1.0"
edition = "2021"

[features]
default = []
user = []
lsp = []
exchange = []

[dependencies]
chrono = "0.4"
ldk-node = "0.7.0"
ureq = { version = "2.10.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "1.3"
futures = "0.3"
async-trait = "0.1"
hex = "0.4.3"
lazy_static = "1.4"
dirs = "5.0"
openssl = { version = "0.10", default-features = false, features = ["vendored"] }

# GUI dependencies
eframe = { version = "0.30.0" }
egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "color-hex"] }
egui_extras = { version = "0.30.0", features = ["default"] }
qrcode = { version = "0.14" }
image = { version = "0.24" }

# backend HTTP API stack 
anyhow = "1.0"
axum  = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"

# lsp ops dashboard stack
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures-util = "0.3"

# Environment variable loading
dotenvy = "0.15"

[lib]
name = "stable_channels"
path = "src/lib.rs"

[package.metadata.bundle]
name = "Stable Channels"
identifier = "com.stablechannels"
icon = ["icons/icon.icns"]
version = "0.1.0"
resources = ["assets", "resources"]
copyright = "Copyright (c) 2025 Stable Channels Developers"
short_description = "Stable Channels Wallet"
long_description = "A self-custodial bitcoin wallet with USD stability."

[[bin]]
name = "lsp_backend"
path = "src/bin/lsp_backend.rs"

[[bin]]
name = "lsp_frontend"
path = "src/bin/lsp_frontend.rs"

[patch.crates-io]
winit = { git = "https://github.com/toneloc/toneloc-winit-mas.git", rev = "7653bd2b0863428075a57ff4d2dbaf900352812a" }