[package]
name = "sc-rest-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["native"]
native = []
serde = ["sc-protos/serde"]

[dependencies]
sc-protos = { path = "../sc-protos" }
# Only the generated types are needed — depend on ldk-server-grpc directly so
# the wasm (lsp-server-gui web) build doesn't drag in the native hyper/tokio
# stack that ldk-server-client carries. Same rev as stable-channels-lsp, so the
# types unify.
ldk-server-grpc = { git = "https://github.com/lightningdevkit/ldk-server", rev = "0e4434d7083ae9926c73f26e7cd52f00bde44d37", features = ["serde"], default-features = false }
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
bitcoin_hashes = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false }
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Location"] }
