[package]
name = "stable-channels-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
stable-channels   = { path = "../.." }
sc-protos         = { path = "../sc-protos" }
ldk-server-client = { git = "https://github.com/lightningdevkit/ldk-server", rev = "e975689b0b8332c3ace1e7272c2fd0c4153144b7", features = ["serde"], default-features = false }
# ldk-node is pulled transitively by stable-channels but we need it as a direct
# dep so we can name `ldk_node::lightning::ln::types::ChannelId` etc. in our
# module path. The rev must match the root Cargo.toml.
ldk-node          = { git = "https://github.com/lightningdevkit/ldk-node", rev = "16eaa6f46308965f501904506be3ceecd293f358" }
hex               = "0.4"

# Async trait support for &dyn LdkServerCalls (stable Rust async-fn-in-trait
# does not yet support trait objects).
async-trait       = "0.1"

# HTTP/REST stack
axum             = "0.8"
axum-server      = { version = "0.7", features = ["tls-rustls"] }
tokio            = { version = "1", features = ["full"] }
tower-http       = { version = "0.6", features = ["trace"] }

# Protobuf wire format
prost            = "0.11"
bytes            = "1"

# APNs push notifications.
a2 = "0.10"

# FCM (Android) push notifications: HTTPS + OAuth2 JWT.
reqwest    = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1"
openssl    = { version = "0.10", default-features = false, features = ["vendored"] }

# sqlite for the push tokens store (declared explicitly even though stable-channels pulls it transitively).
rusqlite = { version = "0.31", features = ["bundled"] }

# HMAC + TLS
bitcoin_hashes   = "0.14"
# NOTE: ldk-server-client pulls in rustls 0.21; we only declare tokio-rustls
# here (which bundles rustls 0.23 via the post-0.26 API) and rely on Cargo
# to unify. Do NOT add a direct `rustls` dep to avoid the 0.21/0.23 split.
tokio-rustls     = { version = "0.26", features = ["ring"] }
ring             = "0.17"
base64           = "0.22"

# Config + logging
serde            = { version = "1", features = ["derive"] }
toml             = "0.8"
clap             = { version = "4", features = ["derive"] }
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow           = "1"
thiserror        = "1"

[dev-dependencies]
getrandom        = "0.2"
tempfile         = "3"
